--- a/rank.ipynb
+++ b/rank.ipynb
@@ -6212,7 +6212,6 @@
     "print('R2 score:', r2_score(y_test, y_pred))\n",
     "print('RMSE:', np.sqrt(mean_squared_error(y_test, y_pred)))\n",
     "#additional accuracy metrics\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_log_error\n",
     "print('MAE:', mean_absolute_error(y_test, y_pred))\n"
    ]
   },
@@ -6244,7 +6243,38 @@
     "print('R2 score:', r2_score(y_test, y_pred))\n",
     "print('RMSE:', np.sqrt(mean_squared_error(y_test, y_pred)))\n",
     "#additional accuracy metrics\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_log_error\n",
+    "print('MAE:', mean_absolute_error(y_test, y_pred))\n",
+    "print('MSLE:', mean_squared_log_error(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.9980698949215696\n",
+      "RMSE: 13.358929892310789\n",
+      "MAE: 6.949567155404524\n",
+      "MSLE: 0.0018952237529446866\n"
+     ]
+    }
+   ],
+   "source": [
+    "#xgboost\n",
+    "from xgboost import XGBRegressor\n",
+    "#fit the model\n",
+    "model = XGBRegressor()\n",
+    "model.fit(X_train, y_train)\n",
+    "#predict the values\n",
+    "y_pred = model.predict(X_test)\n",
+    "#check the accuracy\n",
+    "print('R2 score:', r2_score(y_test, y_pred))\n",
+    "print('RMSE:', np.sqrt(mean_squared_error(y_test, y_pred)))\n",
+    "#additional accuracy metrics\n",
     "print('MAE:', mean_absolute_error(y_test, y_pred))\n",
     "print('MSLE:', mean_squared_log_error(y_test, y_pred))\n"
    ]
@@ -6254,7 +6284,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
